--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <body>
     <div class="textColumn">
       <h1>Congratulations</h1>
-      <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud</p>
+      <p>Your first AWS Elastic Beanstalk Node.js application is now running on your own dedicated environment in the AWS Cloud, and is being continuously delivered by CircleCI!</p>
     </div>
     <div class="linksColumn">
       <h2>What's Next?</h2>
